--- a/index.html
+++ b/index.html
@@ -3,59 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Hijau dengan Efek Timbul</title>
+    <title>Blog Hijau Elegan</title>
     <style>
+        /* Gaya dasar */
         body {
-            font-family: Arial, sans-serif;
-            background-color: #e0f2e9;
+            font-family: 'Poppins', sans-serif;
+            background-color: #e8f5e9;
             margin: 0;
             padding: 0;
+            color: #2e7d32;
         }
+
+        /* Header dengan efek bayangan */
         header {
-            background: linear-gradient(45deg, #4caf50, #81c784);
+            background: linear-gradient(135deg, #388e3c, #66bb6a);
             color: white;
             text-align: center;
-            padding: 20px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            font-size: 24px;
+            font-weight: bold;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
         }
+
+        /* Kontainer utama */
         .container {
             width: 80%;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin: 50px auto;
+            padding: 30px;
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease-in-out;
         }
+
+        /* Efek hover pada container */
+        .container:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
+        }
+
+        /* Judul */
         h1 {
             text-align: center;
-            color: #388e3c;
+            color: #1b5e20;
+            font-size: 28px;
         }
+
+        /* Paragraf */
         p {
-            line-height: 1.6;
-            color: #555;
+            font-size: 18px;
+            line-height: 1.8;
+            color: #4e4e4e;
         }
+
+        /* Footer */
         footer {
             text-align: center;
-            padding: 10px;
-            background-color: #4caf50;
+            padding: 15px;
+            background: #388e3c;
             color: white;
             position: fixed;
             width: 100%;
             bottom: 0;
-            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 -3px 10px rgba(0, 0, 0, 0.1);
+            font-size: 14px;
         }
     </style>
 </head>
 <body>
+
     <header>
-        <h1>Selamat Datang di Blog Hijau</h1>
+        Blog Hijau Elegan
     </header>
+
     <div class="container">
         <h1>Judul Postingan</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque leo nec sem feugiat, at convallis nunc bibendum.</p>
     </div>
+
     <footer>
-        &copy; 2025 Blog Hijau. Dibuat dengan cinta oleh [Nama Anda].
+        &copy; 2025 Blog Hijau. Dibuat oleh [Nama Anda].
     </footer>
+
 </body>
 </html>
